--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@amcharts/amcharts5": "^5.15.0",
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.2",
     "framer-motion": "^12.24.12",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.70.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.11.0",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
@@ -26,6 +30,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/redux-persist": "^4.0.0",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
