--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_BASE_URL=http://localhost:3002/api/v1/
+VITE_BASE_URL=https://clearanceclan-backend.onrender.com/api/v1/
+
+# https://clearanceclan-backend.onrender.com/
