--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@amcharts/amcharts5": "^5.15.0",
     "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.19",
     "axios": "^1.13.2",
     "framer-motion": "^12.24.12",
     "lucide-react": "^0.562.0",
